fix: [orders] item not showing correctly

--- a/src/pages/Orders/styles.module.scss
+++ b/src/pages/Orders/styles.module.scss
@@ -1,6 +1,6 @@
 .wrapper {
   border-radius: 7px;
-  height: calc(100vh - 44px);
+  height: calc(100vh - 60px);
   .noOrder {
     padding: 8px 21px;
     color: var(--tg-theme-hint-color);
